--- a/Ep2/index.html
+++ b/Ep2/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body">
     <div id="root">
     </div>
-    <script src="DOM-main.js"></script>
+    <script src="main-dom.js"></script>
 </body>
 </html>
